2012-07-04  Miklos Szeredi <miklos@szeredi.hu>

	* Fix install of mount.fuse from out-of-tree build.  Patch by
	Olivier Blin

2012-04-24  Miklos Szeredi <miklos@szeredi.hu>

	* Add fallocate operation.  Patch by Anatol Pomozov

2012-05-16  Miklos Szeredi <miklos@szeredi.hu>

	* Linking to a library that uses threads requires the application
	to be linked with -pthreads otherwise some pthread functions will
	be linked to stubs in glibc.  So move -pthread from Libs.private
	to Libs in fuse.pc.  Reported by Werner Fink

	* Fix the compile command in the examples. Reported by Luciano
	Dalle Ore

2012-04-20  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.9.0

2012-04-20  Miklos Szeredi <miklos@szeredi.hu>

	* Add missing fuse_fs_flock to fuse_versionscript

2012-04-10  Miklos Szeredi <miklos@szeredi.hu>

	* Check protocol version before sending notifications and return
	-ENOSYS if a particular notification is not supported.

	* Add 'flag_utime_omit_ok' flag to fuse_operations.  If the
	filesystem sets this flag then ->utimens() will receive UTIME_OMIT
	and UTIME_NOW values as specified in utimensat(2).

2012-01-27  Miklos Szeredi <miklos@szeredi.hu>

	* Interpret octal escape codes in options.  Requested by Jan
	Engelhardt

2012-01-26  Miklos Szeredi <miklos@szeredi.hu>

	* Add man pages for fusermount, mount.fuse and ulockmgr_server.
	Lifted from the Debian package.  The man pages were written by
	Daniel Baumann and Bastien Roucaries

2012-01-13  Miklos Szeredi <miklos@szeredi.hu>

	* Disable symbol versions on MacOSX.  Patch by Anatol Pomozov

2012-01-02  Miklos Szeredi <miklos@szeredi.hu>

	* Remove unnecessary mutex unlock at the end of multithreaded
	event loop.

2011-12-09  Miklos Szeredi <miklos@szeredi.hu>

	* Fix hang in wait_on_path().  Reported by Ville Silventoinen

	* Don't unhash name in FORGET.  This resulted in ENOENT being
	returned for unlinked but still open files if the kernel sent a
	FORGET request for the parent directory.
