@@ -23,7 +23,7 @@ ulockmgr_server_LDFLAGS = -pthread
 install-exec-hook:
 	-chmod u+s $(DESTDIR)$(bindir)/fusermount
 	@if test ! -e $(DESTDIR)/dev/fuse; then \
-		$(mkdir_p) $(DESTDIR)/dev; \
+		$(MKDIR_P) $(DESTDIR)/dev; \
 		echo "mknod $(DESTDIR)/dev/fuse -m 0666 c 10 229 || true"; \
 		mknod $(DESTDIR)/dev/fuse -m 0666 c 10 229 || true; \
 	fi
@@ -35,9 +35,9 @@ UDEV_RULES_PATH = @UDEV_RULES_PATH@
 INIT_D_PATH = @INIT_D_PATH@
 
 install-exec-local:
-	$(mkdir_p) $(DESTDIR)$(MOUNT_FUSE_PATH)
+	$(MKDIR_P) $(DESTDIR)$(MOUNT_FUSE_PATH)
 	$(INSTALL_PROGRAM) $(builddir)/mount.fuse $(DESTDIR)$(MOUNT_FUSE_PATH)/mount.fuse
-	$(mkdir_p) $(DESTDIR)$(INIT_D_PATH)
+	$(MKDIR_P) $(DESTDIR)$(INIT_D_PATH)
 	$(INSTALL_SCRIPT) $(srcdir)/init_script $(DESTDIR)$(INIT_D_PATH)/fuse
 	@if test -x /usr/sbin/update-rc.d; then \
 		echo "/usr/sbin/update-rc.d fuse start 34 S . start 41 0 6 . || true"; \
@@ -45,7 +45,7 @@ install-exec-local:
 	fi
 
 install-data-local:
-	$(mkdir_p) $(DESTDIR)$(UDEV_RULES_PATH)
+	$(MKDIR_P) $(DESTDIR)$(UDEV_RULES_PATH)
 	$(INSTALL_DATA) $(srcdir)/udev.rules $(DESTDIR)$(UDEV_RULES_PATH)/99-fuse.rules
 
 uninstall-local:
